runtime/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-deployment
  labels:
    app: blog
spec:
  selector:
    matchLabels:
      app: blog
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: blog
        sha256: "${GITHUB_SHA}"
    spec:
      containers:
      - name: blog
        image: ghcr.io/${REPOSITORY}:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
